<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Words Memo</string>
    <string name="drawer_open">Open side drawer</string>
    <string name="drawer_close">Close side drawer</string>
    <string name="drawer_opened">Choose action</string>

    <string name="mi_new_tran">New expense</string>
    <string name="mi_new_income">New income</string>
    <string name="mi_show_today">Today\'s records</string>
    <string name="mi_categories">Categories</string>
    <string name="mi_accounts">Accounts</string>
    <string name="mi_budgets">Budgets</string>

    <string name="mi_title_expenses">Expenses</string>
    <string name="mi_title_settings">Settings</string>
    <string name="mi_title_views">Views</string>
    <string name="passwd_lbl">Enter master password</string>
    <string name="password_nm">Password</string>
    <string name="ok_lbl">OK</string>
    <string name="passwd_title">Password protection</string>
    <string name="password_verify_lbl">Verify password</string>
    <string name="passwd_new_lbl">Enter NEW password</string>
    <string name="password_too_short">Password is too short!</string>
    <string name="password_differs">Verification failed: passwords are not equal.</string>
    <string name="password_incorrect">Password is invalid, access denied</string>
    <string name="account_title_lbl">Tags:</string>
    <string name="account_total_lbl">Total words:</string>
    <string name="version_lbl">Version:</string>
    <string name="account_add_new_lbl">Click to add new Tag</string>
    <string name="accdlg_title_lbl">Title</string>
    <string name="amount_lbl">Words</string>
    <string name="accdlg_desc_lbl">Description</string>
    <string name="accdlg_add_title">Add new tag</string>
    <string name="accdlg_edit_title">Edit current tag</string>
    <string name="delete_confirmation">Delete this record?</string>

    <string name="mi_title_main">Main actions</string>
    <string name="mi_do_training">Training</string>
    <string name="mi_do_test">Test with score</string>
    <string name="mi_manage_words">Manage words</string>
    <string name="mi_export_xls">Export words to excel</string>
    <string name="mi_import_xls">Import words from excel</string>
    <string name="mi_testing_results">Highest scores and results</string>
    <string name="word_count">words</string>
    <string name="action_new_tag">Create</string>
    <string name="words_lbl">Words:</string>
    <string name="wordcat_add_new_lbl">Click to add new Word</string>
    <string name="workedit_word">Word / Phrase:</string>
    <string name="wordedit_tags">Tags:</string>
    <string name="workedit_translate">Translation:</string>
    <string name="workedit_thesaurus">Thesaurus:</string>
    <string name="tags_choose_tags">Choose tags:</string>
    <string name="test_name">Test name:</string>
    <string name="user_name">Your name:</string>
    <string name="test_setup_title">Test parameters:</string>
    <string name="start_now">Start now!</string>
    <string name="new_word_lbl">+ Word</string>
    <string name="fname_lbl">Filename:</string>
    <string name="export_dir_lbl">Export to directory:</string>
    <string name="import_dir_lbl">Import from directory:</string>
    <string name="err_wrong_dir_name">Error: invalid directory name!</string>
    <string name="err_wrong_file_name">Error: invalid file name!</string>
    <string name="err_user_name">Error: invalid user name!</string>
    <string name="total_words">Total words:</string>
    <string name="score">Score:</string>
    <string name="time_spent">Time spent:</string>
    <string name="total_errors">Errors:</string>
    <string name="date_start">Date start:</string>
    <string name="date_finish">Date finish:</string>
    <string name="tags_lbl">Tags:</string>
    <string name="task_info_lbl" formatted="false">Words: %d, Errors: %s, Spent: %s</string>
    <string name="high_score_lbl">Highest scores:</string>
    <string name="by_date_lbl">Results by date:</string>
    <string name="continue_lbl">Continue</string>
</resources>
