<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:id="@+id/textView1" android:layout_gravity="center_vertical|left" android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" android:textColor="@color/holoblue_dark" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tcreate_name_entry"
                android:layout_weight="1" android:maxLines="1" android:lines="1"
                android:linksClickable="true"
                android:inputType="text|textCapWords"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/lang_arr"
                android:id="@+id/tcreate_lang_spin"
                android:spinnerMode="dropdown"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tcreate_say_but" android:src="@drawable/ic_action_volume_on"
                android:clickable="true"
                android:contentDescription="@string/words_lbl"
                android:cropToPadding="false"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wordedit_tags"
            android:id="@+id/textView11" android:layout_gravity="center_vertical|left" android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" android:textColor="@color/holoblue_dark" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center">
        <EditText
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:id="@+id/tcreate_tags_entry" android:layout_weight="1" android:maxLines="3" android:lines="1"
                android:linksClickable="true"
                android:inputType="none" android:editable="false"
            android:clickable="true" />
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tcreate_tags_but" android:src="@drawable/ic_action_labels"
                android:clickable="true"
                android:contentDescription="@string/wordedit_tags"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_words"
                android:id="@+id/textView111" android:layout_gravity="center_vertical|left" android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" android:textColor="@color/holoblue_dark" android:textStyle="bold"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tcreate_total_words" android:layout_gravity="center_vertical|left" android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" android:textColor="@color/holoblue_dark" android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="bottom|right">

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel"
                android:id="@+id/tcreate_cancel_but" android:layout_gravity="right|center_vertical"
                android:paddingLeft="10dp" android:paddingRight="10dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_lbl"
                android:id="@+id/tcreate_continue_btn"
                android:paddingLeft="15dp" android:paddingRight="15dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_now"
                android:id="@+id/tcreate_ok_btn"
                android:paddingLeft="15dp" android:paddingRight="15dp"/>
    </LinearLayout>
</LinearLayout>