<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_gravity="center">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:background="@drawable/holorect">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView" android:layout_gravity="center|top" android:src="@drawable/ic_launcher"
                android:padding="10dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:id="@+id/textView"
                    android:textColor="@color/myholobluelight_color" android:textStyle="bold" android:textSize="22sp"
                    />
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version_lbl"
                        android:id="@+id/textView1" android:textColor="@color/myholobluelight_color"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0.1"
                        android:id="@+id/version_lbl"
                        android:layout_marginLeft="5dp" android:textColor="@color/myholobluelight_color"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_word_lbl"
            android:id="@+id/new_word"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="190dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

    </LinearLayout>

</LinearLayout>